# particles-simulation

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  state.h
src/gfx/: drawer.c  drawer.h  render.c  render.h  window.c  window.h
src/particles/: particles.c  particles.h
src/util/: util.c  util.h
